# Project-TALOS

./: .gitignore  README.md
src/robot_arm_moveit_config/: .setup_assistant  package.xml
src/robot_arm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  robot_arm_urdf.gz_ros2_control.xacro  robot_arm_urdf.ros2_control.xacro  robot_arm_urdf.srdf  robot_arm_urdf.urdf.xacro  ros2_controllers.yaml
src/robot_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  moveit_sim.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/robot_arm_urdf/: package.xml  setup.py
src/robot_arm_urdf/config/: joint_names_robot_arm_urdf.yaml  vision_control_base_config.rviz
src/robot_arm_urdf/launch/: test_rviz.launch.py  vision_control.launch.py
src/robot_arm_urdf/meshes/: base_link.STL  gripper_L.STL  gripper_R.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL  pin_L.STL  pin_R.STL
src/robot_arm_urdf/urdf/: robot_arm_urdf.csv  robot_arm_urdf.urdf
src/ros2_vision_cpp/: CMakeLists.txt  package.xml
src/ros2_vision_cpp/src/: goal_pose_publisher.cpp  marker_follower.cpp
src/talos_gazebo/: package.xml  setup.cfg  setup.py
src/talos_gazebo/launch/: gazebo.launch.py
src/talos_gazebo/worlds/: empty.sdf
